fix api send message